# toy-compiler

./: .gitignore  CMakeLists.txt  Readme.md  Todo.md  restart.sh
ctoy/: CMakeLists.txt  main.cpp
ctoy/frontend/: CMakeLists.txt  frontend.cpp  frontend.hpp
ctoy/frontend/lexer/: FrontendLexer.hh  frontendLexer.ll  frontend_lexer.hpp  lexer.ll  location_t.hh
ctoy/frontend/parser/: frontendParser.yy  parser.yy
ctoy/frontend/types/: qualifiers.cpp  qualifiers.hpp  specifiers.cpp  specifiers.hpp  types.cpp  types.hpp
ctoy/frontend/util/: ast.hpp
ctoy/frontend/utils/: ast.cpp  ast.hpp  types.cpp  types.hpp
examples/: 0000.c  0000.c.dot  0000.c.lex
tests/: CMakeLists.txt  test_sample.cpp
